chore: build and release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,12 @@ jobs:
           go-version-file: go.mod
       - name: Ensure go.mod is already tidied
         run: go mod tidy && git diff --no-patch --exit-code
+      - name: Run linters
+        uses: golangci/golangci-lint-action@v6.3.2
+        with:
+          # renovate: depName=golangci/golangci-lint datasource=github-releases
+          version: v1.63.4
+          args: --timeout=3m0s
       - name: Build with Goreleaser
         uses: goreleaser/goreleaser-action@v6.2.1
         with:
